# mesa-strip

./: README.rst  meson.build  meson.options
src/: meson.build
src/gallium/: meson.build
src/gallium/auxiliary/: meson.build
src/gallium/auxiliary/draw/: draw_context.c  draw_gs.h  draw_gs_tess_mesh_stubs.c  draw_mesh.h  draw_private.h  draw_pt_fetch_shade_pipeline.c  draw_tess.h
src/gallium/auxiliary/target-helpers/: inline_sw_helper.h  sw_helper.h
src/gallium/auxiliary/tgsi/: tgsi_exec.c  tgsi_exec.h
src/gallium/drivers/mypipe/: DRAW_VBO_PIPELINE.md  meson.build  mp_context.c  mp_context.h  mp_draw.c  mp_draw.h  mp_fence.c  mp_fence.h  mp_flush.c  mp_flush.h  mp_public.h  mp_raster.c  mp_raster.h  mp_screen.c  mp_screen.h  mp_shader_exec.c  mp_shader_exec.h  mp_state.h  mp_state_blend.c  mp_state_clip.c  mp_state_image.c  mp_state_query.c  mp_state_rasterizer.c  mp_state_sampler.c  mp_state_shader.c  mp_state_streamout.c  mp_state_texture.c  mp_state_vertex.c  mp_texture.c  mp_texture.h
src/gallium/drivers/mypipe/replay/: Makefile  replay  replay.c
src/gallium/drivers/softpipe/: meson.build  sp_context.c  sp_context.h  sp_draw_arrays.c  sp_screen.c  sp_setup.c  sp_state.h  sp_state_image.c  sp_state_shader.c  sp_trace.c  sp_trace.h
src/gallium/targets/d3d10umd/: d3d10_gdi.c
src/gallium/targets/wgl/: wgl.c
